<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:background="#ff002548">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/lclogo"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gamestatus"
            android:id="@+id/textView"
            android:layout_alignTop="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:fontFamily="sans-serif-light"
            android:layout_toEndOf="@+id/imageView"
            android:paddingTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/gametype"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/gamelocation"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/gamedate"
            android:id="@+id/textView4"
            android:paddingRight="5dp"
            android:layout_below="@+id/textView5"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/gameip"
            android:id="@+id/textView5"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="5dp" />
    </RelativeLayout>
</LinearLayout>